2010-01-25  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* src/gsad_omp.c (get_report_omp): Do not close the server connection
	a second time in error case.

2010-01-25  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* src/gsad_omp.c (get_report_omp): Just send the xml describing the
	report if xml report is requested.

2010-01-25  Matthew Mundell <matthew.mundell@intevation.de>

	* src/gsad_omp.c (get_report_omp): If the format is XML send the plain
	XML, and if the format is NULL send the XSL transformed XML (that is,
	send the HTML page).

2010-01-25  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Updated help.

	* src/html/help/configure_credentials.htm4,
	src/html/help/configure_targets.htm4,
	src/html/help/configure_users.htm4,
	src/html/help/glossray.htm4: Updated help.

2010-01-22  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/gsa-style.css (.gb_window_part_center)
	(.gb_window_part_center_error, .logo_l, .logo_r, .logout_panel): Set
	colours so that text shows up when images are off in the browser.

2010-01-22  Matthew Mundell <matthew.mundell@intevation.de>

	Remain on the task page after deleting the task's last report.

	* src/html/src/omp.xsl (html-report-table): Apply the report
	template explicitly.
	(report): Replace with body of get_status_response/task/report.  Go two
	up to get to the task ID.
	(get_status_response/task/report): Remove.
	(get_status_response): Determine if the reports are present by checking
	for task/reports instead of a task/report.
	(commands_response/get_status_response): Remove, redundant.

2010-01-21  Matthew Mundell <matthew.mundell@intevation.de>

	* src/gsad.c (redirect_pid): New variable.
	(gsad_cleanup): Kill redirect child in parent.
	(main): Set redirect_pid in parent.  Set SIGCHLD to SIG_IGN.  Remove
	pidfile creation from redirect child.

2010-01-21  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/oap.xsl (user) [edit]: Switch the modify_password values.
